projeOdevi/k8s/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: mikroservis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-2
      containers:
        - name: eureka-server
          image: eureka-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8761
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: mikroservis
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
