projeOdevi/k8s/kube-state-metrics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: mikroservis
  labels:
    app: kube-state-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-state-metrics
  template:
    metadata:
      labels:
        app: kube-state-metrics
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9100"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: kube-state-metrics
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-1
      containers:
        - name: kube-state-metrics
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.8.2
          ports:
            - containerPort: 9100
              name: http-metrics
            - containerPort: 9101
              name: telemetry
          args:
            - --port=9100
            - --telemetry-port=9101
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9100
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 9100
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: mikroservis
  labels:
    app: kube-state-metrics
spec:
  selector:
    app: kube-state-metrics
  ports:
    - name: http-metrics
      port: 9100
      targetPort: 9100
    - name: telemetry
      port: 9101
      targetPort: 9101
  type: ClusterIP
