projeOdevi/k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: mikroservis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /api/users/health
              port: 8082
            initialDelaySeconds: 45
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: mikroservis
spec:
  selector:
    app: user-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
