projeOdevi/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: mikroservis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.mikroservis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
    - host: eureka.mikroservis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
